--- a/config/kitti/kitti_incre_reg.yaml
+++ b/config/kitti/kitti_incre_reg.yaml
@@ -52,6 +52,7 @@ optimizer:
   learning_rate: 0.01
   weight_decay: 1e-7 # l2 regularization
 eval:
+  o3d_vis_on: False
   wandb_vis_on: False # log to wandb or not
   vis_freq_iters: 0 
   save_freq_iters: 10000 # save the model and octree every x iterations
