--- a/config/maicity/maicity_incre_reg.yaml
+++ b/config/maicity/maicity_incre_reg.yaml
@@ -1,9 +1,9 @@
 setting:
   name: "maicity_incre_reg"
   output_root: "./experiments/"
-  pc_path: "xxx/data/mai_city/ply/sequences/01/velodyne"
-  pose_path: "xxx/data/mai_city/ply/sequences/01/poses.txt"
-  calib_path: "xxx/data/mai_city/ply/sequences/01/calib.txt"
+  pc_path: "./data/mai_city/ply/sequences/01/velodyne"
+  pose_path: "./data/mai_city/ply/sequences/01/poses.txt"
+  calib_path: "./data/mai_city/ply/sequences/01/calib.txt"
   load_model: False # load the pretrained decoder model (optional)
   model_path: "./pretrained/geo_decoder_8dim.pth" 
   first_frame_ref: False
@@ -52,6 +52,7 @@ optimizer:
   learning_rate: 0.01
   weight_decay: 0 # l2 regularization
 eval:
+  o3d_vis_on: False
   wandb_vis_on: False # log to wandb or not
   vis_freq_iters: 0 
   save_freq_iters: 0 # save the model and octree every x iterations
