--- a/config/maicity/maicity_incre_replay.yaml
+++ b/config/maicity/maicity_incre_replay.yaml
@@ -1,9 +1,9 @@
 setting:
   name: "maicity_incre_replay"
   output_root: "./experiments/"
-  pc_path: "xxx/data/mai_city/ply/sequences/01/velodyne"
-  pose_path: "xxx/data/mai_city/ply/sequences/01/poses.txt"
-  calib_path: "xxx/data/mai_city/ply/sequences/01/calib.txt"
+  pc_path: "./data/mai_city/ply/sequences/01/velodyne"
+  pose_path: "./data/mai_city/ply/sequences/01/poses.txt"
+  calib_path: "./data/mai_city/ply/sequences/01/calib.txt"
   load_model: False # load the pretrained decoder model (optional)
   model_path: "./pretrained/geo_decoder_8dim.pth" 
   first_frame_ref: False
