--- a/config/maicity/maicity_incre_reg.yaml
+++ b/config/maicity/maicity_incre_reg.yaml
@@ -52,12 +52,11 @@ optimizer:
   learning_rate: 0.01
   weight_decay: 0 # l2 regularization
 eval:
-  o3d_vis_on: False
   wandb_vis_on: False # log to wandb or not
-  o3d_vis_on: True # visualize the mapping or not
+  o3d_vis_on: False # visualize the mapping or not
   vis_freq_iters: 0 
   save_freq_iters: 0 # save the model and octree every x iterations
-  mesh_freq_frame: 5 # reconstruct the mesh every x frames
+  mesh_freq_frame: 20 # reconstruct the mesh every x frames
   mc_res_m: 0.2 # reconstruction marching cubes resolution
   mc_with_octree: False # querying sdf in the map bbx
   mc_vis_level: 2
